--- a/scss/activities/_blog.scss
+++ b/scss/activities/_blog.scss
@@ -21,6 +21,9 @@
           @include oublogHeadings;
           margin: 0;
           padding: 0;
+          img {
+            width: 100%;
+          }
         }
       }
     }
