--- a/scss/pages/home/_moodleactivityresourcelink.scss
+++ b/scss/pages/home/_moodleactivityresourcelink.scss
@@ -13,11 +13,18 @@
 //    - d) Quick edit title pencil icon (E)
 // 3. Actions
 //    - a) Edit dropdown menu (E)
-//    - b) Completion progress checkbox icon
-//    - c) Copy to Sharing cart button (E)
-// 4. Availability info
-// 5. Activity description
+//    - b) Copy to Sharing cart button (E)
+// 4. Activity information (Completion info)
+// 5. Availability info
+// 6. Activity description
 // -----------------
+
+
+// width of 'Mark as done' button
+$completion-progress-button-width-m: 100px;
+// width of 'To do: Make a submission' and 'To do: Receive a grade' badges
+// combined
+$completion-progress-button-width-d: 326px;
 
 
 // only Grid and Collapsed topics formtas are supported
@@ -45,6 +52,11 @@
               & > h2, & > h3, & > h4, & > h5 {
                 margin-top: 0.75rem !important;
               }
+            }
+          }
+          .no-overflow {
+            & > h2, & > h3, & > h4, & > h5 {
+              line-height: 1.3;
             }
           }
           h2, h3, h4, h5, p {
@@ -91,16 +103,19 @@
             }
             & > div:last-child {
               display: flex;
+              justify-content: space-between;
               flex-wrap: wrap;
             }
           }
         }
         // 2. Activity title and label
         .activityinstance {
-          width: 100%;
+          flex-basis: 100%;
+          min-width: unset;
+          max-width: calc(100% - #{$completion-progress-button-width-m} -
+          #{$component-margin-xs});
           height: auto;
           padding: 0;
-          order: 2;
           // 2a. Moodle activity type icon (E)
           img.activityicon {
             // hidden when editing mode is off
@@ -109,8 +124,15 @@
           &:not(:last-child) {
             margin-bottom: 0;
           }
+          @media only screen and (min-width: $neo-breakpoint) {
+            max-width: calc(100% - #{$completion-progress-button-width-d} -
+            #{$component-margin-sm});
+          }
           a.aalink {
             // 2b. Activity title text
+            .instancename {
+              margin-bottom: $component-margin-xs;
+            }
             &:hover {
               text-decoration: none;
               .instancename:not(.is-numbered),
@@ -135,10 +157,13 @@
             max-width: 100%;
             // new span is created for activity title text
             // when activities are numbered
-            .activity-title {
-              margin-left: 0.375rem;
-              @media only screen and (min-width: $neo-breakpoint) {
-                margin-left: 0.75rem;
+            .instancename {
+              margin-right: $component-margin-sm;
+              .activity-title {
+                margin-left: 0.375rem;
+                @media only screen and (min-width: $neo-breakpoint) {
+                  margin-left: 0.75rem;
+                }
               }
             }
             // 2c. Activity label container
@@ -146,27 +171,93 @@
               @extend %activity-label-container-default;
             }
           }
+          .dimmed {
+            .instancename {
+              color: $slate-grey;
+            }
+            @extend %activity-label-unavailable;
+          }
+          // OU blog last modified
+          .lastmodtext {
+            display: block;
+            margin: 4px 0 0 0;
+          }
         }
         .actions {
           position: static;
           background: none;
         }
-        // 4. Availability info
+        // 4. Activity information (Completion info)
+        .activity-information {
+          display: flex;
+          justify-content: flex-end;
+          flex-basis: 100%;
+          order: 2;
+          float: none;
+          max-width: $completion-progress-button-width-m;
+          margin-bottom: 0;
+          @media only screen and (min-width: $neo-breakpoint) {
+            max-width: $completion-progress-button-width-d;
+          }
+          [data-region=completion-info] {
+            height: auto;
+            text-align: right;
+            // manual 'Mark as done' button
+            button {
+              font-size: 1rem !important;
+              padding: 2px 4px !important;
+              margin: 0 !important;
+              &:not(.btn-outline-success):not(:hover) {
+                color: $midnight-blue !important;
+                border: 1px solid $midnight-blue !important;
+              }
+            }
+            // automatic completion conditions
+            .badge {
+              padding: 2px 4px;
+              font-family: 'KingsBureauGrot';
+              font-size: 1rem;
+              // to match manual button
+              line-height: 1.25rem;
+              span {
+                white-space: pre-wrap;
+              }
+              // keep original green colour for 'Done'
+              &:not(.badge-success) {
+                background-color: $slate-grey;
+              }
+              // only apply margin between multiple badges for the same
+              // activity, and only on mobile
+              &:not(:first-child) {
+                margin-top: 0.25rem;
+                @media only screen and (min-width: $neo-breakpoint) {
+                  margin-top: 0;
+                }
+              }
+            }
+          }
+        }
+        // 5. Availability info
         .availabilityinfo {
+          flex: 1 0 100%;
           order: 3;
-          flex: 0 0 100%;
           margin-top: $component-margin-xs;
           margin-left: 0;
           .label {
+            white-space: pre-wrap;
+            text-align: left;
             background-color: $sea-blue;
             color: $white;
           }
         }
-        // 5. Activity description
+        // 6. Activity description
         .contentafterlink {
            margin-left: 0;
           .no-overflow {
             padding: 0;
+            p {
+              margin: 0;
+            }
           }
         }
         .contentafterlink,
@@ -174,11 +265,9 @@
         // to .contentwithoutlink for restricted activties in student view
         .contentwithoutlink.dimmed_text:not(:only-child) {
           @extend %border-left-related-info;
-          border-radius: 0;
-          order: 3;
-          p {
-            margin: 0 0 $component-margin-sm 0;
-          }
+          flex: 1 0 100%;
+          order: 4;
+          margin-top: $component-margin-xs;
           // restricted activity description
         }
         .contentwithoutlink {
@@ -199,87 +288,6 @@
           .resourcelinkdetails {
             color: $slate-grey;
             font-size: 14px;
-          }
-        }
-      }
-      // additional indentation for sections with activities
-      // that have completion tracking activated
-      &.completion-progress-section {
-        li.activity {
-          .activityinstance {
-            margin-left: 28px;
-            max-width: calc(100% - 28px);
-            @media only screen and (min-width: $neo-breakpoint) {
-              margin-left: 36px;
-              max-width: calc(100% - 36px);
-            }
-            // grey out restricted activities
-            .dimmed,
-            // and "Available but not shown on course page" activities
-            // activity label and icons
-            .stealth {
-              opacity: 0.9;
-              @extend %activity-label-unavailable;
-            }
-          }
-          .actions {
-            // 3b. Completion progress checkbox icon
-            .autocompletion {
-              margin: 0 $component-margin-xs 0 0 !important;
-              @media only screen and (min-width: $neo-breakpoint) {
-                margin: 0 $component-margin-sm 0 0 !important;
-              }
-              img.icon {
-                height: 1.25rem;
-                width: 1.25rem;
-                padding: 0;
-                border-radius: 4px;
-              }
-            }
-            // checkboxes appear as buttons for students
-            form.togglecompletion {
-              & > div {
-              display: flex;
-                button {
-                  display: inline-flex;
-                  margin: 0 $component-margin-sm 0 0 !important;
-                  padding: 0 !important;
-                  width: 20px;
-                  img {
-                    width: 20px;
-                    height: 20px;
-                  }
-                }
-              }
-            }
-          }
-          // availability info and activity description
-          // indented to match .activityistance
-          .availabilityinfo,
-          .contentafterlink,
-          .contentwithoutlink {
-            margin-left: 28px;
-            @media only screen and (min-width: $neo-breakpoint) {
-              margin-left: 36px;
-            }
-          }
-          // folder and label activity type need extra indenting
-          // to match .activityinstance of other activity types
-          &.folder,
-          &.label {
-            .contentwithoutlink {
-              margin-left: 28px;
-              max-width: calc(100% - 28px);
-              @media only screen and (min-width: $neo-breakpoint) {
-                margin-left: 36px;
-                max-width: calc(100% - 36px);
-              }
-            }
-          }
-          &.completion-progress-activity {
-            .activityinstance {
-               margin-left: 0;
-            }
           }
         }
       }
@@ -308,8 +316,10 @@
           // 2. Activity title and label
           .activityinstance {
             margin-left: 100px;
+            max-width: calc(100% - 212px);
             @media only screen and (min-width: $neo-breakpoint) {
               margin-left: 106px;
+              max-width: calc(100% - 448px);
             }
             .inplaceeditable {
               display: flex;
@@ -346,32 +356,18 @@
             .filler {
               display: none !important;
             }
-            .autocompletion {
-              order: 3;
-            }
-            // 3c. Copy to Sharing cart button (E)
-            .add-to-sharing-cart {
-              order: 2;
-              height: 24px;
-              display: flex;
-              align-items: center;
-              i {
-                color: $rules-and-outlines;
-                &::before {
-                  margin: 0;
-                }
-              }
-            }
           }
-          // 4. Availability info
+          // 5. Availability info
           .availabilityinfo,
-          // 5. Activity description
+          // 6. Activity description
           .contentafterlink {
             // increase margins to account for edit dropdown menu and
             // editing move icon
             margin-left: 98px !important;
+            max-width: calc(100% - 98px);
             @media only screen and (min-width: $neo-breakpoint) {
               margin-left: 108px !important;
+              max-width: calc(100% - 108px);
             }
           }
           // folder and label activity type need extra indenting
@@ -394,57 +390,6 @@
             }
           }
         }
-        // additional indentation for sections with activities
-        // that have completion tracking activated
-        &.completion-progress-section {
-          li.activity {
-            padding: 0;
-            .mod-indent-1 {
-              width: 0;
-            }
-            .activityinstance {
-              margin-left: 132px !important;
-              @media only screen and (min-width: $neo-breakpoint) {
-                margin-left: 144px !important;
-              }
-            }
-            .availabilityinfo,
-            .contentafterlink {
-              max-width: calc(100% - 130px) !important;
-              margin-left: 132px !important;
-              @media only screen and (min-width: $neo-breakpoint) {
-                max-width: calc(100% - 144px) !important;
-                margin-left: 144px !important;
-              }
-            }
-            &.folder,
-            &.label {
-              .contentwithoutlink {
-                margin-left: 132px !important;
-                @media only screen and (min-width: $neo-breakpoint) {
-                  margin-left: 144px !important;
-                }
-              }
-            }
-            &.completion-progress-activity {
-              .activityinstance {
-                max-width: calc(100% - 132px) !important;
-                margin-left: 0 !important;
-                @media only screen and (min-width: $neo-breakpoint) {
-                  max-width: calc(100% - 144px) !important;
-                }
-              }
-              .actions {
-                .autocompletion {
-                  margin: 0 12px 0 100px !important;
-                  @media only screen and (min-width: $neo-breakpoint) {
-                    margin: 0 $component-margin-sm 0 108px !important;
-                  }
-                }
-              }
-            }
-          }
-        }
       }
     }
     &.sharing-cart-enabled {
@@ -452,12 +397,30 @@
         ul.section {
           li.activity {
             .activityinstance {
-              margin-left: 16px !important;
-              max-width: calc(100% - 142px);
+              margin-left: 132px !important;
+              max-width: calc(100% - 244px);
+              @media only screen and (min-width: $neo-breakpoint) {
+                margin-left: 142px !important;
+                max-width: calc(100% - 468px);
+              }
             }
             .actions {
+              // 3b. Copy to Sharing cart button (E)
               .add-to-sharing-cart {
-                margin-left: 108px;
+                position: absolute;
+                left: 102px;
+                height: 24px;
+                display: flex;
+                align-items: center;
+                @media only screen and (min-width: $neo-breakpoint) {
+                  left: 108px;
+                }
+                i {
+                  color: $rules-and-outlines;
+                  &::before {
+                    margin: 0;
+                  }
+                }
               }
             }
             // availability info and activity description
@@ -465,63 +428,17 @@
             .availabilityinfo,
             .contentafterlink,
             .contentwithoutlink {
-              margin-left: 142px !important;
-              max-width: calc(100% - 142px) !important;
+              margin-left: 132px !important;
+              max-width: calc(100% - 132px) !important;
+              @media only screen and (min-width: $neo-breakpoint) {
+                margin-left: 142px !important;
+                max-width: calc(100% - 142px) !important;
+              }
             }
             &.folder,
             &.label {
               .contentwithoutlink {
-                margin-left: 16px !important;
-              }
-            }
-          }
-          &.completion-progress-section {
-            li.activity {
-              .activityinstance {
-                margin-left: 44px !important;
-                max-width: calc(100% - 170px);
-                @media only screen and (min-width: $neo-breakpoint) {
-                  margin-left: 52px !important;
-                  max-width: calc(100% - 178px);
-                }
-              }
-              // availability info and activity description
-              // indented to match .activityistance
-              .availabilityinfo,
-              .contentafterlink,
-              .contentwithoutlink {
-                margin-left: 170px !important;
-                max-width: calc(100% - 170px) !important;
-                @media only screen and (min-width: $neo-breakpoint) {
-                  margin-left: 178px !important;
-                  max-width: calc(100% - 178px) !important;
-                }
-              }
-              &.folder,
-              &.label {
-                .contentwithoutlink {
-                  margin-left: 44px !important;
-                  @media only screen and (min-width: $neo-breakpoint) {
-                    margin-left: 52px !important;
-                  }
-                }
-              }
-              &.completion-progress-activity {
-                .activityinstance {
-                  margin-left: 0 !important;
-                  max-width: calc(100% - 170px) !important;
-                  @media only screen and (min-width: $neo-breakpoint) {
-                    max-width: calc(100% - 178px) !important;
-                  }
-                }
-                .actions {
-                  .autocompletion {
-                    margin-left: 12px !important;
-                    @media only screen and (min-width: $neo-breakpoint) {
-                      margin-left: 16px !important;
-                    }
-                  }
-                }
+                margin-left: $component-margin-sm !important;
               }
             }
           }
